--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.mvc.view.prefix=/WEB-INF/pages/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/viwes/
+spring.mvc.view.suffix=.html
+db.mysql.url=jdbc:mysql://localhost:3306/tour_shop
+db.mysql.user=root
+db.mysql.password=12345
+db.mysql.driver=com.mysql.cj.jdbc.Driver
