Added UserDao, User entity, changed default pages login, registration, main.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.mvc.view.prefix=/WEB-INF/viwes/
-spring.mvc.view.suffix=.html
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.html
 db.mysql.url=jdbc:mysql://localhost:3306/tour_shop
 db.mysql.user=root
 db.mysql.password=12345
