--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.3.10.RELEASE</version>
 		</dependency>
 		<dependency>
@@ -79,11 +75,11 @@
 			<artifactId>spring-core</artifactId>
 			<version>5.3.7</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.liquibase</groupId>-->
-<!--			<artifactId>liquibase-core</artifactId>-->
-<!--			<version>4.3.4</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.3.4</version>
+		</dependency>
 
 	</dependencies>
 
