--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 db.mysql.url=jdbc:mysql://localhost:3306/tour_shop
 db.mysql.user=root
-db.mysql.password=12345
+db.mysql.password=123
 db.mysql.driver=com.mysql.cj.jdbc.Driver
+
+spring.liquibase.changelog=classpath:db/changelog/db.changelog-master.yml
+spring.liquibase.drop-first=true
