--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-db.mysql.url=jdbc:mysql://localhost:3306/tour_shop
-db.mysql.user=root
-db.mysql.password=12345
-db.mysql.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tour_shop
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
 
 spring.liquibase.changelog=classpath:db/changelog/db.changelog-master.yml
 spring.liquibase.drop-first=true
